# LucumaPi-Qt

./: .Makefile.swp  .gitignore  Pipfile  README.md
client/: CMakeLists.txt  connecttoserver.cpp  connecttoserver.h  mainwindow.cpp  mainwindow.h
client/img/: images.qrc  interface.qml
server/: CMakeLists.txt  images1.qrc  interface-connection.qml  main.cpp  mainwindow.cpp  mainwindow.h
server/PLC/: connectplc.cpp  connectplc.h
server/img/: dashboard.qml  images.qrc
server/server-architecture/: dbnumber.cpp  dbnumber.h  plcnumber.cpp  plcnumber.h  server.cpp  server.h  serverwindow.cpp  serverwindow.h
server/snap7/: snap7.cpp  snap7.h
source/: conf.py  index.rst
